formatted the bottom part of app

--- a/style.css
+++ b/style.css
@@ -69,4 +69,10 @@ body {
     font-weight: 400;
     margin-top: -10px;
 }
-    
+
+
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
