--- a/style.css
+++ b/style.css
@@ -75,4 +75,22 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px    
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img{
+    width: 40px;
+    margin-right: 10px;   
+}
+
+.humidity, .wind {
+    font-size: 28px;
+    margin-top: -6px;
 }
